--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       margin-top: 1rem;
       padding: 0.5rem;
       font-size: 1rem;
-      .centered-screen {
+    .centered-screen {
   display: flex;
   flex-direction: column;
   justify-content: center; /* 垂直置中 */
@@ -58,6 +58,9 @@
   height: 100vh;           /* 填滿整個螢幕高度 */
 }
 
+.bodyOffset {
+  padding-top: 60px; /* 跟上面 starProgressContainer 高度一致 */
+}
 
     }
     #map, #grid, #delivered, #thanks { display: none; text-align: center; }
@@ -114,7 +117,7 @@
 #courier {
   display: none !important;
 }
-img {
+#img {
   max-width: 90vw;
   height: auto;
 }
@@ -123,11 +126,19 @@ img {
   </style>
 </head>
 <body>
-  
+  <div id="starProgressContainer" style="
+  width: 100%;
+  height: 60px;              /* ← 白色條的高度 */
+  background: white;
+  position: relative;
+  z-index: 1;
+  display: none;             /* 初始隱藏 */
+">
   <img id="progressBar" src=""
-  style="position: fixed; top: 0.5rem; left: 50%; transform: translateX(-50%);
-         width: 100px; height: auto; z-index: 999;">
-
+    style="position: absolute; top: 50%; left: 50%;
+           transform: translate(-50%, -50%);
+           width: 180px; height: auto; z-index: 2;">
+</div>
 
 
   <div id="menu" class="menu"></div>
@@ -161,7 +172,8 @@ img {
   <div id="delivered">
     <p>您的餐點已送達！</p>
     <img id="deliveredAnimation" src="done1.png"
-    style="max-width: 60vw; height: auto; margin-top: 1rem;" />
+    style="max-width: 35vw; height: auto; margin-top: 1rem;" />
+    <p></p>
     <button class="confirm" onclick="confirmDelivery()">確認收餐</button>
   </div>
   <div id="grid">
@@ -369,7 +381,10 @@ setInterval(debounceSyncLockStatus, 1000);
 }
 
 
+
 function showPreDelivery() {
+  document.getElementById('starProgressContainer').style.display = 'block';
+
   startProgressBarAnimation('star01.png', 'star02.png');
 
   document.getElementById('map').style.display = 'none';
@@ -428,6 +443,15 @@ function showPreDelivery() {
   }, 12500);
  
 }
+function showStarBar() {
+  const bar = document.getElementById('starBarWrapper');
+  if (bar) bar.style.display = 'block';
+}
+
+function hideStarBar() {
+  const bar = document.getElementById('starBarWrapper');
+  if (bar) bar.style.display = 'none';
+}
 
 
 
@@ -435,7 +459,11 @@ function showPreDelivery() {
 
 
     function prepareDelivery(motorKey) {
+      document.getElementById('starProgressContainer').style.display = 'block';
+
       startProgressBarAnimation('star00.png', 'star01.png');
+      showStarBar();
+
       if (lockStatus[motorKey]) return;
       selectedMotor = motorKey;
       lockStatus[motorKey] = true;
@@ -557,6 +585,9 @@ for (let r = 1; r <= 4; r++) {
  
       startThankImageLoop();
       document.getElementById('thanks').style.display = 'block';
+      
+    startProgressBarAnimation('star05.png', 'star06.png'); // ✅ 加在這裡
+    showStarBar(); // 如果你要讓白色背景條一起顯示
     }, 7000);
   }
 }
@@ -608,6 +639,8 @@ function confirmAndShowEaten() {
   // 跳轉畫面
   document.getElementById('grid').style.display = 'none';
   document.getElementById('eatenEnding').style.display = 'block';
+  startProgressBarAnimation('star05.png', 'star06.png'); // ✅ 加這行
+  showStarBar();
 
   // 啟動圖輪播
   let currentIndex = 0;
@@ -629,11 +662,20 @@ function confirmAndShowEaten() {
     function goBackHome() {
   document.getElementById('thanks').style.display = 'none';
   document.getElementById('menu').style.display = 'block';
+  document.getElementById('starProgressContainer').style.display = 'none';
+document.getElementById('progressBar').src = '';
 
-  // 停止圖片輪播
+
+  hideStarBar();
+
+
   clearInterval(thankAnimationInterval);
-  clearInterval(progressInterval); // 停止動畫
-  
+  clearInterval(progressInterval); // 停止 star05-06 動畫
+  hideStarBar(); // ✅ 隱藏白色條
+
+  // ✅ 清空進度條圖片，避免卡住 star06 畫面
+  const bar = document.getElementById('progressBar');
+  if (bar) bar.src = '';
 }
 let progressInterval;
 
