--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>偽外送平台</title>
+  <title>空投</title>
   <style>
     body { font-family: sans-serif; margin: 0; padding: 1rem; background: #fefefe; }
     h1 { font-size: 1.5rem; text-align: center; margin-bottom: 1rem; }
@@ -164,6 +164,11 @@
   width: 100%;
   max-width: 220px;
   min-height: 80px;
+}
+.introText {
+  text-align: center;
+  white-space: normal;
+  word-break: break-word;
 }
 
 
@@ -440,6 +445,7 @@
     <p>他說蠻好吃的</p>
     <button onclick="goBackHome()">回首頁</button>
   </div>
+  
   
   
 
